--- a/project-addons/custom_documents_cc/static/scss/custom_cc.scss
+++ b/project-addons/custom_documents_cc/static/scss/custom_cc.scss
@@ -37,8 +37,16 @@
     border: 1px solid black;
     width: 100%;
     font-size: 12px;
-    thead, tfoot{
+    thead{
         background-color: rgb(172, 172, 172);
+        display: table-header-group 
+    }
+    tfoot{
+        background-color: rgb(172, 172, 172);
+        display: table-row-group
+    }
+    tr{
+        page-break-inside: avoid;
     }
     th{
         border: 1px solid black;
@@ -53,12 +61,21 @@
 }
 
 .police-table{
+    margin-top: 2em;
     border-collapse: collapse;
     border: 1px solid black;
     width: 100%;
-    font-size: 12px;
-    thead, tfoot{
+    font-size: 10px;
+    thead{
         background-color: rgb(172, 172, 172);
+        display: table-header-group 
+    }
+    tfoot{
+        background-color: rgb(172, 172, 172);
+        display: table-row-group
+    }
+    tr{
+        page-break-inside: avoid;
     }
     th{
         border: 1px solid black;
@@ -66,6 +83,37 @@
         padding-right: 4px;
     }
     td{
+        font-size: 10px;
+        border: 1px solid black;
+        padding-left: 4px;
+        padding-right: 4px;
+    }
+}
+.police-table-jew{
+    margin-top: 2em;
+    border-collapse: collapse;
+    border: 1px solid black;
+    width: 100%;
+    font-size: 10px;
+    thead{
+        background-color: rgb(172, 172, 172);
+        display: table-header-group 
+    }
+    tfoot{
+        background-color: rgb(172, 172, 172);
+        display: table-row-group
+    }
+    tr{
+        page-break-inside: avoid;
+    }
+    th{
+        border: 1px solid black;
+        padding-left: 4px;
+        padding-right: 4px;
+        line-height: 1em;
+    }
+    td{
+        font-size: 10px;
         border: 1px solid black;
         padding-left: 4px;
         padding-right: 4px;
@@ -73,4 +121,25 @@
 }
 .po-group{
     background-color: rgb(172, 172, 172);
+}
+
+// LABEL PURCHASE
+.label-po-container{
+    height:100%;
+    width: 79mm;
+    margin-left: -12px;
+    border: 1px solid black;
+    .section1{
+        width: 100%;
+        height:100%;
+        border: 1px solid black;
+    }
+    .prod-name{
+        font-size:15px;
+        font-weight: bold;
+    }
+    .section-att{
+        font-size:15px;
+        font-weight: bold;
+    }
 }
