--- a/project-addons/custom_documents_cc/views/purchase_view.xml
+++ b/project-addons/custom_documents_cc/views/purchase_view.xml
@@ -7,7 +7,24 @@
         <field name="priority">1000</field>
         <field name="inherit_id" ref="purchase.purchase_order_form" />
         <field name="arch" type="xml">
+            <field name="company_id" position="after">
+                <field name="num_order" readonly="True"/>
+            </field>
             <notebook position="inside">
+                <page string="Legal Text">
+                    <group string="Conditions">
+                        <field name="contract_text" nolabel="1"/>
+                    </group>
+                    <group string="Conditions 2">
+                        <field name="legal_text" nolabel="1"/>
+                    </group>
+                    <group string="Recoverable Conditions" attrs="{'invisible': [('cc_type', '!=', 'recoverable_sale')]}">
+                        <field name="recoverable_text" widget="html" nolabel="1"/>
+                    </group>
+                    <group string="Recoverable Conditions 2" attrs="{'invisible': [('cc_type', '!=', 'recoverable_sale')]}">
+                        <field name="recoverable_text2" widget="html" nolabel="1" />
+                    </group>
+                </page>
                 <page string="Signature">
                     <group string="Signature">
                         <field name="signature" nolabel="1" widget="signature"/>
