--- a/project-addons/custom_documents_cc/views/report_police.xml
+++ b/project-addons/custom_documents_cc/views/report_police.xml
@@ -4,51 +4,104 @@
     <template id="report_police_document">
         <t t-call="web.basic_layout">
             <div class="page">
-                <div class="contract-title">
-                    LISTADO DE DIARIO DE COMPRAS
+                <div class="row">
+                    <div class="col-9">
+                        <h3>Imforme de Diario de Compras</h3>
+                    </div>
+                    <div class="col-3 text-right" >
+                        <img t-if="user_company.police_report_logo" t-att-src="image_data_uri(user_company.police_report_logo)" style="max-height: 15px;max-width: 50%" alt="Logo"/>
+                        <div style="font-size:9px;">
+                            Fecha desde: <span t-esc="dt_start"/> Fecha hasta: <span t-esc="dt_end"/>
+                        </div>
+                    </div>
                 </div>
-            </div>
 
-
-            <div>
-                <table class="police-table">
-                    <thead>
-                        <tr>
-                            <th style="width:10%" name="th_description" class="text-center">Producto</th>
-                            <th style="width:10%" name="th_description" class="text-center">Coste</th>
-                            <th style="width:10%" name="th_quantity" class="text-center">Uds.</th>
-                            <th style="width:30%" name="th_amount" class="text-center">PVR</th>
-                            <th style="width:40%" name="th_amount" class="text-center">Descripción</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <t t-foreach="ordered_purchases" t-as="po">
-                            <t t-foreach="grouped_lots[po]" t-as="lot">
-                                <tr>
-                                    <td><span t-field="lot.name"/></td>
-                                    <td><span t-field="lot.standard_price"/></td>
-                                    <td><span t-field="lot.purchase_line_id.product_qty"/></td>
-                                    <td><span t-field="lot.standard_price"/></td>
-                                    <td><span t-field="lot.product_id.name"/></td>
+                <div>
+                    <table class="police-table">
+                        <thead>
+                            <tr>
+                                <th style="width:10%" name="th_description" class="text-center">Producto</th>
+                                <th style="width:10%" name="th_description" class="text-center">Coste</th>
+                                <th style="width:10%" name="th_quantity" class="text-center">Uds.</th>
+                                <th style="width:30%" name="th_amount" class="text-center">PVR</th>
+                                <th style="width:40%" name="th_amount" class="text-center">Descripción</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <t t-foreach="ordered_purchases" t-as="po">
+                                <t t-foreach="grouped_lots[po]" t-as="lot">
+                                    <tr>
+                                        <td><span t-field="lot.name"/></td>
+                                        <td><span t-field="lot.standard_price"/></td>
+                                        <td class="text-right">1</td>
+                                        <td><span t-field="lot.list_price"/></td>
+                                        <td style="text-transform: uppercase;">
+                                            <div>
+                                                <span t-field="lot.product_id.name"/>
+                                            </div>
+                                            <div t-if="lot.brand">
+                                                MARCA: <span t-field="lot.brand"/>
+                                            </div>
+                                            <div t-if="lot.model">
+                                                MODELO: <span t-field="lot.model"/>
+                                            </div>
+                                            <div t-if="lot.id_product">
+                                                Nº SERIE: <span t-field="lot.id_product"/>
+                                            </div>
+                                            <div t-if="lot.jew_weight">
+                                                PESO: <span t-field="lot.jew_weight"/>
+                                            </div>
+                                            <div t-if="lot.jew_metal">
+                                                METAL O METALES: <span t-field="lot.jew_metal"/>
+                                            </div>
+                                            <div t-if="lot.jew_weight2">
+                                                PESO PIEDRA: <span t-field="lot.jew_weight2"/>
+                                            </div>
+                                            <div t-if="lot.jew_grabation">
+                                                GRABACIONES: <span t-field="lot.jew_grabation"/>
+                                            </div>
+                                            <t t-foreach="lot.attribute_line_ids.filtered('attribute_id.to_print')" t-as="atl">
+                                                <div>
+                                                    <span t-field="atl.attribute_id.name"/>:
+                                                    <t t-foreach="atl.value_ids" t-as="val">
+                                                        <span t-if="val" t-esc="val.name"/>. 
+                                                    </t>
+                                                </div>
+                                            </t>
+                                        </td>
+                                    </tr>
+                                </t>
+                                <tr class="po-group">
+                                    <td><span t-field="po.name"/></td>
+                                    <td><span t-field="po.date_order"/></td>
+                                    <td><span t-field="po.payment_form_str_report"/></td>
+                                    <td><span t-field="po.partner_id.name" style="text-transform: uppercase;"/></td>
+                                    <td>Empleado: <span t-field="po.user_id.user_code"/></td>
                                 </tr>
                             </t>
-                            <tr class="po-group">
-                                <td><span t-field="po.name"/></td>
-                                <td><span t-field="po.date_order"/></td>
-                                <td><span t-field="po.payment_form_str_report"/></td>
-                                <td><span t-field="po.partner_id.name"/></td>
-                                <td><span t-field="po.user_id.name"/></td>
-                            </tr>
-                        </t>
-                    </tbody>
-                </table>
-            </div>
+                        </tbody>
+                    </table>
+                </div>
 
 
 
-            <div class="footer">
-                <div class="row">
-                    <center><span>Page </span><span class="page" /> of <span class="topage" /></center>
+                <div class="footer o_boxed_footer">
+                    <div class="row">
+                        <div class="col-3">
+                            <span>Control: </span><span t-esc="footer_data['create_date']"></span>
+                        </div>
+                        <div class="col-3">
+                            <span>Gali Converters, S.L. CC006</span>
+                        </div>
+                        <div class="col-4">
+                            <span>Usuario: </span><span t-esc="footer_data['user']"></span>
+                        </div>
+                        <div class="col-8">
+                            <!-- <span>Page </span><span class="page" /> of <span class="topage" /> -->
+                            <!-- <center><span>Page </span><span class="page" /> of <span class="topage" /></center>
+                            <center><span>Page </span><span class="page" /> of <span class="topage" /></center> -->
+                        </div>
+                    </div>
                 </div>
             </div>
         </t>     
@@ -68,7 +121,7 @@
         <field name="page_width">0</field>
         <field name="orientation">Landscape</field>
         <field name="margin_top">5</field>
-        <field name="margin_bottom">5</field>
+        <field name="margin_bottom">15</field>
         <field name="margin_left">5</field>
         <field name="margin_right">5</field>
         <field name="header_line" eval="False"/>
