--- a/project-addons/custom_documents_cc/views/report_purchase_order.xml
+++ b/project-addons/custom_documents_cc/views/report_purchase_order.xml
@@ -103,7 +103,7 @@
                         <thead>
                             <tr>
                                 <th style="width:20%" name="th_description">Código</th>
-                                <th style="width:60%" name="th_description">Description</th>
+                                <th style="width:60%" name="th_description">Descripción</th>
                                 <th style="width:15%" name="th_quantity" class="text-right">Cantidad</th>
                                 <!-- <th name="th_price_unit" class="text-right"><strong>Unit Price</strong></th> -->
                                 <th style="width:15%" name="th_amount" class="text-right">Importe</th>
@@ -115,12 +115,19 @@
                             <t t-foreach="o.order_line" t-as="line">
                                 <t t-set="current_subtotal" t-value="current_subtotal + line.price_subtotal" groups="account.group_show_line_subtotals_tax_excluded"/>
                                 <t t-set="current_subtotal" t-value="current_subtotal + line.price_total" groups="account.group_show_line_subtotals_tax_included"/>
-                                <t t-set="total_qty" t-value="total_qty + line.product_qty"/>
+                                <t t-set="total_qty" t-value="total_qty + line.lot_qty"/>
 
                                 <tr t-att-class="'bg-200 font-weight-bold o_line_section' if line.display_type == 'line_section' else 'font-italic o_line_note' if line.display_type == 'line_note' else ''">
                                     <t t-if="not line.display_type">
                                         <td id="code">
-                                            <span t-if="line.lot_ids" t-field="line.lot_ids[0].name"/>
+                                            <t t-if="len(line.lot_ids) > 1">
+                                                <span t-if="line.lot_ids" t-field="line.lot_ids[0].name"/>
+                                                <br/>a<br/>
+                                                 <span t-if="line.lot_ids" t-field="line.lot_ids[-1].name"/>
+                                            </t>
+                                            <t t-else="">
+                                                <span t-if="line.lot_ids" t-field="line.lot_ids[0].name"/>
+                                            </t>
                                         </td>
                                         <td id="product">
                                             <strong><span t-field="line.product_id.name"/></strong>
@@ -136,15 +143,40 @@
                                             <div t-if="line.id_product">
                                                  <span>Número De Serie: </span><span t-field="line.id_product"/>
                                             </div>
+                                            <div t-if="line.brand">
+                                                    MARCA: <span t-field="line.brand"/>
+                                                </div>
+                                                <div t-if="line.model">
+                                                    MODELO: <span t-field="line.model"/>
+                                                </div>
+                                                <div t-if="line.id_product">
+                                                    Nº SERIE: <span t-field="line.id_product"/>
+                                                </div>
+                                                <div t-if="line.jew_weight">
+                                                    PESO: <span t-field="line.jew_weight"/>
+                                                </div>
+                                                <div t-if="line.jew_metal">
+                                                    METAL O METALES: <span t-field="line.jew_metal"/>
+                                                </div>
+                                                <div t-if="line.jew_weight2">
+                                                    PESO PIEDRA: <span t-field="line.jew_weight2"/>
+                                                </div>
+                                                <div t-if="line.jew_grabation">
+                                                    GRABACIONES: <span t-field="line.jew_grabation"/>
+                                                </div>
+                                                <t t-foreach="line.attribute_line_ids.filtered('attribute_id.to_print')" t-as="atl">
+                                                    <div>
+                                                        <span t-field="atl.attribute_id.name"/>:
+                                                        <t t-foreach="atl.value_ids" t-as="val">
+                                                            <span t-if="val" t-esc="val.name"/>. 
+                                                        </t>
+                                                    </div>
+                                                </t>
                                         </td>
-                                       
                                         <td class="text-right">
-                                            <span t-esc="line.product_qty"/>
+                                            <span t-esc="int(line.lot_qty)"/>
                                             <!-- <span t-field="line.product_uom.name" groups="uom.group_uom"/> -->
                                         </td>
-                                        <!-- <td class="text-right">
-                                            <span t-field="line.price_unit"/>
-                                        </td> -->
                                         <td class="text-right">
                                             <span t-field="line.price_subtotal"
                                                 t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
@@ -271,6 +303,7 @@
                 </div>
             </div>
 
+            <!-- PÁGINAS EXTRA RECUPERABLE -->
             <t t-if="o.cc_type == 'recoverable_sale'">
                 <div class="page" style="page-break-before:always;">
                     <div class="contract-title">
@@ -283,19 +316,21 @@
                             <thead>
                                 <tr>
                                     <th style="width:20%" name="th_description">Código</th>
-                                    <th style="width:60%" name="th_description">Description</th>
+                                    <th style="width:35%" name="th_description">Descripción</th>
                                     <th style="width:15%" name="th_quantity" class="text-right">Cantidad</th>
-                                    <!-- <th name="th_price_unit" class="text-right"><strong>Unit Price</strong></th> -->
                                     <th style="width:15%" name="th_amount" class="text-right">Importe</th>
+                                    <th style="width:15%" name="th_price_unit" class="text-right"><strong>Precio Recompra (Sin Iva)</strong></th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <t t-set="current_subtotal" t-value="0"/>
                                 <t t-set="total_qty" t-value="0"/>
+                                <t t-set="renew_untaxed_subtotal" t-value="0"/>
                                 <t t-foreach="o.order_line" t-as="line">
+                                    <t t-set="renew_untaxed_subtotal" t-value="renew_untaxed_subtotal + line.renew_price_untaxed" groups="account.group_show_line_subtotals_tax_included"/>
                                     <t t-set="current_subtotal" t-value="current_subtotal + line.price_subtotal" groups="account.group_show_line_subtotals_tax_excluded"/>
                                     <t t-set="current_subtotal" t-value="current_subtotal + line.price_total" groups="account.group_show_line_subtotals_tax_included"/>
-                                    <t t-set="total_qty" t-value="total_qty + line.product_qty"/>
+                                    <t t-set="total_qty" t-value="total_qty + line.lot_qty"/>
 
                                     <tr t-att-class="'bg-200 font-weight-bold o_line_section' if line.display_type == 'line_section' else 'font-italic o_line_note' if line.display_type == 'line_note' else ''">
                                         <t t-if="not line.display_type">
@@ -316,18 +351,47 @@
                                                 <div t-if="line.id_product">
                                                     <span>Número De Serie: </span><span t-field="line.id_product"/>
                                                 </div>
+                                                 <div t-if="line.brand">
+                                                    MARCA: <span t-field="line.brand"/>
+                                                </div>
+                                                <div t-if="line.model">
+                                                    MODELO: <span t-field="line.model"/>
+                                                </div>
+                                                <div t-if="line.id_product">
+                                                    Nº SERIE: <span t-field="line.id_product"/>
+                                                </div>
+                                                <div t-if="line.jew_weight">
+                                                    PESO: <span t-field="line.jew_weight"/>
+                                                </div>
+                                                <div t-if="line.jew_metal">
+                                                    METAL O METALES: <span t-field="line.jew_metal"/>
+                                                </div>
+                                                <div t-if="line.jew_weight2">
+                                                    PESO PIEDRA: <span t-field="line.jew_weight2"/>
+                                                </div>
+                                                <div t-if="line.jew_grabation">
+                                                    GRABACIONES: <span t-field="line.jew_grabation"/>
+                                                </div>
+                                                <t t-foreach="line.attribute_line_ids.filtered('attribute_id.to_print')" t-as="atl">
+                                                    <div>
+                                                        <span t-field="atl.attribute_id.name"/>:
+                                                        <t t-foreach="atl.value_ids" t-as="val">
+                                                            <span t-if="val" t-esc="val.name"/>. 
+                                                        </t>
+                                                    </div>
+                                                </t>
                                             </td>
                                         
                                             <td class="text-right">
-                                                <span t-esc="int(line.product_qty)"/>
+                                                <span t-esc="int(line.lot_qty)"/>
                                                 <!-- <span t-field="line.product_uom.name" groups="uom.group_uom"/> -->
                                             </td>
-                                            <!-- <td class="text-right">
-                                                <span t-field="line.price_unit"/>
-                                            </td> -->
                                             <td class="text-right">
                                                 <span t-field="line.price_subtotal"
                                                     t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                                            </td>
+                                            <td class="text-right">
+                                                <span t-field="line.renew_price_untaxed" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                                             </td>
                                         </t>
                                         <t t-if="line.display_type == 'line_section'">
@@ -362,6 +426,21 @@
                                     <td class="text-right">Total</td>
                                     <td class="text-right"><span t-esc="int(total_qty)"/></td>
                                     <td class="text-right"><span t-esc="o.amount_total" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/></td>
+                                    <td class="text-right"><span t-esc="round(renew_untaxed_subtotal, 2)"/></td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td class="text-right">IVA</td>
+                                    <td class="text-right"></td>
+                                    <td class="text-right"></td>
+                                    <td class="text-right"><span t-esc="o.recoverable_tax" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/></td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td class="text-right">Total Con IVA</td>
+                                    <td class="text-right"></td>
+                                    <td class="text-right"></td>
+                                    <td class="text-right"><span t-esc="o.recoverable_tax_total" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/></td>
                                 </tr>
                             </tfoot>
                         </table>
