--- a/project-addons/custom_documents_cc/views/res_company_view.xml
+++ b/project-addons/custom_documents_cc/views/res_company_view.xml
@@ -20,6 +20,11 @@
                         <field name="recoverable_text2" widget="html" nolabel="1"/>
                     </group>
                 </page>
+                <page string="Custom Reports">
+                    <group string="Custom reports">
+                        <field name="police_report_logo"  widget="image"/>
+                    </group>
+                </page>
             </notebook>
         </field>
     </record>
