--- a/project-addons/product_serial_number/views/purchase_view.xml
+++ b/project-addons/product_serial_number/views/purchase_view.xml
@@ -22,6 +22,19 @@
                 <button name="button_confirm" context="{'skyp_dys': True}" type="object" states="draft,sent" string="Force Confirm" class="btn-warning" id="force_confirm"/>
             </button>
 
+            <field name="amount_total" position="after">
+                <div class="oe_subtotal_footer_separator oe_inline" attrs="{'invisible': [('cc_type', 'not in', ('recoverable_sale'))]}">
+                    <label for="recoverable_sale_total"/>
+                </div>
+                <field name="recoverable_sale_total_untaxed" nolabel="1" class="oe_subtotal_footer_separator" widget="monetary" options="{'currency_field': 'currency_id'}" attrs="{'invisible': [('cc_type', 'not in', ('recoverable_sale'))]}"/>
+                <field name="recoverable_tax" widget="monetary" options="{'currency_field': 'currency_id'}" attrs="{'invisible': [('cc_type', 'not in', ('recoverable_sale'))]}"/>
+                <div class="oe_subtotal_footer_separator oe_inline" attrs="{'invisible': [('cc_type', 'not in', ('recoverable_sale'))]}">
+                    <label for="recoverable_tax_total"/>
+                </div>
+                <field name="recoverable_tax_total" nolabel="1" class="oe_subtotal_footer_separator" widget="monetary" options="{'currency_field': 'currency_id'}" attrs="{'invisible': [('cc_type', 'not in', ('recoverable_sale'))]}"/>
+                <!-- <field name="recoverable_sale_total" nolabel="1" class="oe_subtotal_footer_separator" widget="monetary" options="{'currency_field': 'currency_id'}" attrs="{'invisible': [('cc_type', 'not in', ('recoverable_sale'))]}"/> -->
+            </field>
+
             <div name="button_box" position="inside">
                 <button
                     name="view_lots_button"
@@ -35,11 +48,7 @@
 
             <field name="company_id" position="after">
                 <field name="cc_type" />
-                <field
-                    name="all_recovered"
-                    attrs="{
-                        'invisible': [('cc_type', 'not in', ('recoverable_sale'))]}"
-                />
+                <field name="all_recovered" attrs="{'invisible': [('cc_type', 'not in', ('recoverable_sale'))]}"/>
             </field>
 
             <!-- Avoid editable in tree view -->
@@ -73,6 +82,11 @@
                 position="after"
             >
                     <group string="Product Info">
+                        <field name="jewelry"  attrs="{'invisible': [('jewelry', '!=', True)]}"/>
+                        <field name="jew_weight"  attrs="{'invisible': [('jewelry', '!=', True)], 'required': [('jewelry', '==', True)]}"/>
+                        <field name="jew_metal"  attrs="{'invisible': [('jewelry', '!=', True)],  'required': [('jewelry', '==', True)]}"/>
+                        <field name="jew_grabation" attrs="{'invisible': [('jewelry', '!=', True)]}"/>
+                        <field name="jew_weight2"  attrs="{'invisible': [('jewelry', '!=', True)]}"/>
                         <field name="ean13" />
                         <field name="brand" />
                         <field name="model" />
@@ -84,6 +98,7 @@
                         'required':  [('parent.cc_type', 'in', ('recoverable_sale'))],
                         'invisible': [('parent.cc_type', 'not in', ('recoverable_sale'))]}"
                         />
+                        <field name="renew_price"/>
                         <field name="product_state" widget="statusbar" options="{'clickable': '1'}"/>
                     </group>
                     <group string="Product Info 2">
@@ -93,6 +108,7 @@
                     </group>
                     <!-- <group string="Product State">
                     </group> -->
+                    
                      <group string="Dysfuncionalities" attrs="{'invisible': [('product_dys_ids', '=', [])]}">
                         <field name="product_dys_ids" widget="many2many_tags" invisible="1"/>
                         <field name="dysfuncionality_ids"  domain="[('id', 'in', product_dys_ids)]" widget="many2many_tags" options="{'no_create': True}"/>
